--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-youtube": "^10.1.0",
+    "swiper": "^11.0.5"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
